tests/solidity-semantic-tests/out/errors/panic_via_import/C.clear.teal
#pragma version 10
#pragma typetrack false

// /tmp/multisource_jze5eqh1/s2.sol.C.clear_state_program() -> uint64:
main:
    pushint 1
    return
